# gst-e-invoicing

./: .editorconfig  .env.sample  .gitignore  CHANGELOG.md  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: build.yml  main.yml
1. getting-credentials/: index.html
2. using-pass-through-apis/: index.html
3. library-documentation/: index.html
4. handling-errors/: index.html
authentication/: session.py  test.py
css/: theme.css
docs/: 1. getting-credentials.md  2. using-pass-through-apis.md  3. library-documentation.md  4. handling-errors.md  getting-credentials.md  index.md  production-credentials.md  sandbox-credentials.md  using-pass-through-apis.md
fontello/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
fontello/font/: fontello.eot
js/: theme.js
requirements/: requirements-dev.txt  requirements.in  requirements.txt
search/: search_index.json
src/gst_irn/: __init__.py  codes.py  converters.py  crypto.py  generators.py  qr.py  session.py
src/gst_irn/codes/: states.py
tests/: snapshot.py  test.py
tests/test_assets/: qr_code.html
